--- a/GFT/appsettings.json
+++ b/GFT/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "GFTContext": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=GFTTest;Integrated Security=SSPI;"
     }
-  },
-  "AllowedHosts": "*"
 }
