--- a/GFT/appsettings.json
+++ b/GFT/appsettings.json
@@ -8,6 +8,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "GFTContext": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=GFTTest;Integrated Security=SSPI;"
+        "GFTContext": "Data Source=(localdb)\\MSSQLLocalDB;Integrated Security=SSPI;"
     }
 }
