--- a/GFT/GFT.csproj
+++ b/GFT/GFT.csproj
@@ -7,7 +7,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.11" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.2">
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	    <PrivateAssets>all</PrivateAssets>
+	  </PackageReference>
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.2" />
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
 	</ItemGroup>
